--- a/css/reservas.css
+++ b/css/reservas.css
@@ -52,7 +52,7 @@ body, a {
 }
 @media (min-width: 768px) {
     .contenedor  {
-        height: 100vh; /*100 viewport height, esto va a hacer que tome toda la altura, que tome toda la ventana grafica*/
+       /* height: 100vh; /*100 viewport height, esto va a hacer que tome toda la altura, que tome toda la ventana grafica*/
         display: grid;
         gap: 50px;
         grid-template-columns: repeat(2, 1fr);
@@ -61,7 +61,7 @@ body, a {
     }
 }
 .header .contenido {
-    padding: 30px 0;
+    padding: 15px 0;
 }
 
 .header.fijo {
@@ -114,7 +114,7 @@ img {
     margin-bottom: 40px;
     top: 0;
     text-align: center;
-    color: var(--grisOscuro);
+    color: #038507;
     text-transform: uppercase;
 }
 
@@ -134,7 +134,6 @@ img {
 
 .formularioReserva{
     width: 100%;
-    margin
 }
 
 .campo {
@@ -156,8 +155,22 @@ img {
     border-radius: 10rem;
     border: 1px solid var(--gris);
     width: 80%;
+    outline: none;
     
 }
+
+
+button, select {
+    flex: 1;
+    padding: 12.5px;
+    border-radius: 10rem;
+    border: 1px solid var(--gris);
+    width: 80%;
+    outline: none;
+
+}
+
+
 
 #boton {
     background-color: var(--primario);
@@ -200,4 +213,23 @@ img {
     margin: 15px;
     padding: 15px;
     text-align: center;
+
+}
+
+
+#contenidoTabla {
+    color: var(--negro);
+    width: 500px;
+    height: 500px;
+    overflow-y: scroll;
+    border: 1px solid #038507;
+    padding: 10px;
+}
+th, td {
+    width: 100px;
+}
+th {
+    color: var(--primario);
+    font-weight: bold;
+
 }
