--- a/css/sidenav.css
+++ b/css/sidenav.css
@@ -58,7 +58,7 @@
     box-sizing: border-box;
   }
 
-  button {
+  .botonesSideNav {
     background-color: #04AA6D;
     color: white;
     padding: 8px 16px;
@@ -68,10 +68,40 @@
     width: 100%;
   }
 
-  button:hover {
+  .botonesSideNav:hover {
     opacity: 0.8;
   }
 
   .check {
     margin-right: 10px;
+  }
+
+  .mensajediv {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    margin-top: 50px;
+    background-color: #e35036;
+    color: white;
+    height: 70px;
+    padding: 17px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .usuarioRegistrado {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    margin-top: 50px;
+    background-color:#09960b;
+    color: white;
+    height: 70px;
+    padding: 17px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
   }
